should be complete

--- a/index.html
+++ b/index.html
@@ -78,18 +78,132 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const songs = [
-                { month: "July", title: "", file: "Jul/.mp3", cover: "Jul/covers/.jpg" },
+                { month: "July", title: "All Life Long ft. Kid Cudi", file: "Jul/All Life Long.mp3", cover: "Jul/covers/alllifelong5.jpg" },
+                { month: "July", title: "All Life Long (OG)", file: "Jul/All Life Long V1.mp3", cover: "Jul/covers/alllifelong2.png" },
+                { month: "July", title: "Amuse U ft. G Herbo", file: "Jul/Amuse U.mp3", cover: "Jul/covers/amuseyou.jpg" },
+                { month: "July", title: "Back In Chicago", file: "Jul/Back In Chicago.mp3", cover: "Jul/covers/backinchicago.png" },
+                { month: "July", title: "Bank Account", file: "Jul/Bank Account.mp3", cover: "Jul/covers/bankaccount.png" },
+                { month: "July", title: "Blind Fold", file: "Jul/Blind Fold.mp3", cover: "Jul/covers/blindfold4.png" },
+                { month: "July", title: "Blood On My Jeans ft. Gunna", file: "Jul/Blood On My Jeans.mp3", cover: "Jul/covers/bloodonmyjeans3.jpeg" },
+                { month: "July", title: "Bury Me Alive", file: "Jul/Bury Me Alive.mp3", cover: "Jul/covers/burymealive4.png" },
+                { month: "July", title: "Clean", file: "Jul/Clean.mp3", cover: "Jul/covers/clean2.jpg" },
+                { month: "July", title: "Conversations", file: "Jul/Conversations.mp3", cover: "Jul/covers/conversations.png" },
+                { month: "July", title: "Coraline", file: "Jul/Coraline.mp3", cover: "Jul/covers/coraline2.jpeg" },
+                { month: "July", title: "Day 1", file: "Jul/Day 1.mp3", cover: "Jul/covers/day1 3.png" },
+                { month: "July", title: "Finesse Me ft. King Jefe", file: "Jul/Finesse Me.mp3", cover: "Jul/covers/newfinesse.png" },
+                { month: "July", title: "Forever", file: "Jul/Forever.mp3", cover: "Jul/covers/leftyou3.jpg" },
+                { month: "July", title: "Go Home", file: "Jul/Go Home.mp3", cover: "Jul/covers/gohome2.png" },
+                { month: "July", title: "Hilfiger", file: "Jul/Hilfiger.mp3", cover: "Jul/covers/hilfiger5.jpg" },
+                { month: "July", title: "Hunt You Down", file: "Jul/Hunt You Down.mp3", cover: "Jul/covers/huntyoudown2.png" },
+                { month: "July", title: "In My Mind", file: "Jul/In My Mind.mp3", cover: "Jul/covers/inmymind.png" },
+                { month: "July", title: "In Zone", file: "Jul/In Zone.mp3", cover: "Jul/covers/inzone3.jpg" },
+                { month: "July", title: "Keep Save (Murder Rate)", file: "Jul/Keep Save.mp3", cover: "Jul/covers/murderrate7.jpeg" },
+                { month: "July", title: "Lurkin' (Lotti Lotti)", file: "Jul/Lurkin.mp3", cover: "Jul/covers/lurkin4.jpg" },
+                { month: "July", title: "Misunderstood", file: "Jul/Misunderstood.mp3", cover: "Jul/covers/misunderstood.png" },
+                { month: "July", title: "Molly & Mike", file: "Jul/Molly & Mike.mp3", cover: "Jul/covers/molly&mike.png" },
+                { month: "July", title: "Mood", file: "Jul/Mood.mp3", cover: "Jul/covers/mood.jpg" },
+                { month: "July", title: "Mr. Freeze", file: "Jul/Mr Freeze.mp3", cover: "Jul/covers/mrfreeze3.png" },
+                { month: "July", title: "Oh No", file: "Jul/Oh No.mp3", cover: "Jul/covers/ohno2.png" },
+                { month: "July", title: "Ohh My, Ohh My", file: "Jul/Ohh My, Ohh My.mp3", cover: "Jul/covers/ohmyohmy2.png" },
+                { month: "July", title: "Racks In", file: "Jul/Racks In.mp3", cover: "Jul/covers/racksin.png" },
+                { month: "July", title: "Road Runners", file: "Jul/Road Runners.mp3", cover: "Jul/covers/roadrunners8.jpg" },
+                { month: "July", title: "Shadows", file: "Jul/Shadows.mp3", cover: "Jul/covers/shadows4.png" },
+                { month: "July", title: "Thousand Times ft. Miley Cyrus", file: "Jul/Thousand Times.mp3", cover: "Jul/covers/beenthroughthis5.jpg" },
+                { month: "July", title: "Track Race", file: "Jul/Track Race.mp3", cover: "Jul/covers/trackrace2.jpg" },
+                { month: "July", title: "Unexplainable ft. The Kid LAROI", file: "Jul/Unexplainable.mp3", cover: "Jul/covers/unexplainable.png" },
+                { month: "July", title: "Ur Done", file: "Jul/Ur Done.mp3", cover: "Jul/covers/bitchyouredone4.jpg" },
+                { month: "July", title: "Waves ft. Young Thug", file: "Jul/Waves.mp3", cover: "Jul/covers/waves2.jpg" },
+                { month: "July", title: "You & I", file: "Jul/You & I.mp3", cover: "Jul/covers/you&i2.jpg" },
 
-                { month: "August", title: "", file: "Aug/.mp3", cover: "Aug/covers/.jpg" },
+                { month: "August", title: "Anxiety", file: "Aug/Anxiety.mp3", cover: "Aug/covers/anxiety2.jpg" },
+                { month: "August", title: "Can't Be Saved", file: "Aug/Cant Be Saved.mp3", cover: "Aug/covers/cantbesaved.png" },
+                { month: "August", title: "Carry It", file: "Aug/Carry It.mp3", cover: "Aug/covers/carryit27.png" },
+                { month: "August", title: "Codeine Guzzler", file: "Aug/Codeine Guzzler.mp3", cover: "Aug/covers/codeineguzzler3.jpg" },
+                { month: "August", title: "For The Taking", file: "Aug/For The Taking.mp3", cover: "Aug/covers/forthetaking4.jpeg" },
+                { month: "August", title: "Get Over It", file: "Aug/Get Over It.mp3", cover: "Aug/covers/getoverit3.jpg" },
+                { month: "August", title: "Give Me My Fix", file: "Aug/Give Me My Fix.mp3", cover: "Aug/covers/givememyfix7.jpg" },
+                { month: "August", title: "Hard To Digest", file: "Aug/Hard To Digest.mp3", cover: "Aug/covers/hardtodigest3.png" },
+                { month: "August", title: "Karate Kid", file: "Aug/Karate Kid.mp3", cover: "Aug/covers/karatekid6.jpg" },
+                { month: "August", title: "Life's A Mess (OG)", file: "Aug/Lifes A Mess.mp3", cover: "Aug/covers/lifesamess.png" },
+                { month: "August", title: "Made It Work", file: "Aug/Made It Work.mp3", cover: "Aug/covers/madeitwork.png" },
+                { month: "August", title: "Masterpiece", file: "Aug/Masterpiece.mp3", cover: "Aug/covers/masterpiece.png" },
+                { month: "August", title: "NLMB Oh Dear", file: "Aug/NLMB Oh Dear.mp3", cover: "Aug/covers/nlmbohdear5.jpg" },
+                { month: "August", title: "Out My Body ft. G Herbo", file: "Aug/Out My Body.mp3", cover: "Aug/covers/outmybody.png" },
+                { month: "August", title: "Percs", file: "Aug/Percs.mp3", cover: "Aug/covers/percs5.png" },
+                { month: "August", title: "Racks Out", file: "Aug/Racks Out.mp3", cover: "Aug/covers/racksout4.jpeg" },
+                { month: "August", title: "Ran Off", file: "Aug/Ran Off.mp3", cover: "Aug/covers/ranoff.png" },
+                { month: "August", title: "Rikers", file: "Aug/Rikers.mp3", cover: "Aug/covers/rikers7.jpg" },
+                { month: "August", title: "Rockstar In His Prime", file: "Aug/Rockstar In His Prime.mp3", cover: "Aug/covers/rockstarinhisprime8.png" },
+                { month: "August", title: "Rodents", file: "Aug/Rodents.mp3", cover: "Aug/covers/rodents3.jpg" },
+                { month: "August", title: "Sacrifices (Cake)", file: "Aug/Sacrifices.mp3", cover: "Aug/covers/cake.png" },
+                { month: "August", title: "Simp", file: "Aug/Simp.mp3", cover: "Aug/covers/livingatthetop6.png" },
+                { month: "August", title: "Sour", file: "Aug/Sour.mp3", cover: "Aug/covers/sour7.jpg" },
+                { month: "August", title: "Speed Me Up", file: "Aug/Speed Me Up.mp3", cover: "Aug/covers/keepup4.jpg" },
+                { month: "August", title: "Substance", file: "Aug/Substance.mp3", cover: "Aug/covers/substance.png" },
+                { month: "August", title: "Tempted", file: "Aug/Tempted.mp3", cover: "Aug/covers/tempted2.jpg" },
+                { month: "August", title: "The Light", file: "Aug/The Light.mp3", cover: "Aug/covers/thelight.png" },
+                { month: "August", title: "Until The Plug Comes Back Around", file: "Aug/Until The Plug Comes Back Around.mp3", cover: "Aug/covers/youwouldntunderstand.png" },
+                { month: "August", title: "Work", file: "Aug/Work.mp3", cover: "Aug/covers/work.jpg" },
+                { month: "August", title: "You Wouldn't Understand", file: "Aug/You Wouldnt Understand.mp3", cover: "Aug/covers/youwouldntunderstand.png" },
 
-                { month: "September", title: "", file: "Sep/.mp3", cover: "Sep/covers/.jpg" },
+                { month: "September", title: "734", file: "Sep/734.mp3", cover: "Sep/covers/734 4.jpg" },
+                { month: "September", title: "Confide", file: "Sep/Confide.mp3", cover: "Sep/covers/confide2.png" },
+                { month: "September", title: "Fire In My Lungs", file: "Sep/Fire In My Lungs.mp3", cover: "Sep/covers/fireinmylungs.png" },
+                { month: "September", title: "Infrared ft. Trippie Redd", file: "Sep/Infrared.mp3", cover: "Sep/covers/infrared5.png" },
+                { month: "September", title: "London Interlude", file: "Sep/London Interlude.mp3", cover: "Sep/covers/londoninterlude3.jpg" },
+                { month: "September", title: "Lose You", file: "Sep/Lose You.mp3", cover: "Sep/covers/loseyou3.png" },
+                { month: "September", title: "Misery Avenue", file: "Sep/Misery Avenue.mp3", cover: "Sep/covers/miseryavenue5.jpg" },
+                { month: "September", title: "Must Be Nice", file: "Sep/Must Be Nice.mp3", cover: "Sep/covers/fireflies3.png" },
+                { month: "September", title: "No Shortcuts ft. MadeInTYO", file: "Sep/No Shortcuts.mp3", cover: "Sep/covers/noshortcuts2.jpeg" },
+                { month: "September", title: "On Time", file: "Sep/On Time.mp3", cover: "Sep/covers/ontime13.png" },
+                { month: "September", title: "Red Bull", file: "Sep/Red Bull.mp3", cover: "Sep/covers/redbull2.jpg" },
+                { month: "September", title: "What's Brakkin'?", file: "Sep/Whats Brakkin.mp3", cover: "Sep/covers/whatsbrakkin8.png" },
 
-                { month: "October", title: "", file: "Oct/.mp3", cover: "Oct/covers/.jpg" },
+                { month: "October", title: "8 Minute Freestyle", file: "Oct/8 Minute Freestyle.mp3", cover: "Oct/covers/8minutefreestyle2.png" },
+                { month: "October", title: "27 Club", file: "Oct/27 Club.mp3", cover: "Oct/covers/27club7.jpeg" },
+                { month: "October", title: "Barbarian", file: "Oct/Barbarian.mp3", cover: "Oct/covers/barbarian7.png" },
+                { month: "October", title: "Dream (Maybe)", file: "Oct/Dream.mp3", cover: "Oct/covers/maybe.jpg" },
+                { month: "October", title: "Freestyle", file: "Oct/Freestyle.mp3", cover: "Oct/covers/freestyle6.jpg" },
+                { month: "October", title: "Hairline Trigger", file: "Oct/Hairline Trigger.mp3", cover: "Oct/covers/hairlinetrigger.jpeg" },
+                { month: "October", title: "IMDA$$HIXX", file: "Oct/IMDA$$HIXX.mp3", cover: "Oct/covers/IMDA$$HIXX.png" },
+                { month: "October", title: "In The Trap", file: "Oct/In The Trap.mp3", cover: "Oct/covers/inthetrap.png" },
+                { month: "October", title: "Kel-Tec Top", file: "Oct/Kel-Tec Top.mp3", cover: "Oct/covers/keltectop.png" },
+                { month: "October", title: "Meagan Good", file: "Oct/Meagan Good.mp3", cover: "Oct/covers/meagangood9.png" },
+                { month: "October", title: "Money War ft. G Herbo", file: "Oct/Money War.mp3", cover: "Oct/covers/moneywar.jpg" },
+                { month: "October", title: "O.J. Glove", file: "Oct/O.J. Glove.mp3", cover: "Oct/covers/ojglove2.jpg" },
+                { month: "October", title: "Red Dead Redemption", file: "Oct/Red Dead Redemption.mp3", cover: "Oct/covers/reddeadredemption16.png" },
+                { month: "October", title: "Rental", file: "Oct/Rental.mp3", cover: "Oct/covers/rental20.png" },
+                { month: "October", title: "Sick", file: "Oct/Sick.mp3", cover: "Oct/covers/drugsaremyfriends2.jpg" },
+                { month: "October", title: "Stick Talk", file: "Oct/Stick Talk.mp3", cover: "Oct/covers/sticktalk8.png" },
+                { month: "October", title: "Surf", file: "Oct/Surf.mp3", cover: "Oct/covers/wrongtime.png" },
+                { month: "October", title: "Your Loss", file: "Oct/Your Loss.mp3", cover: "Oct/covers/yourloss3.jpg" },
 
-                { month: "November", title: "", file: "Nov/.mp3", cover: "Nov/covers/.jpg" },
+                { month: "November", title: "4L", file: "Nov/4L.mp3", cover: "Nov/covers/4l3.png" },
+                { month: "November", title: "Army Armory", file: "Nov/Army Armory.mp3", cover: "Nov/covers/armyarmory2.jpg" },
+                { month: "November", title: "Big Dog", file: "Nov/Big Dog.mp3", cover: "Nov/covers/bigdog4.jpg" },
+                { month: "November", title: "Can't Let Go", file: "Nov/Cant Let Go.mp3", cover: "Nov/covers/cantletgo.png" },
+                { month: "November", title: "Chrome", file: "Nov/Chrome.mp3", cover: "Nov/covers/chrome4.jpg" },
+                { month: "November", title: "Do It", file: "Nov/Do It.mp3", cover: "Nov/covers/doit.png" },
+                { month: "November", title: "Further", file: "Nov/Further.mp3", cover: "Nov/covers/further2.png" },
+                { month: "November", title: "In My Arms", file: "Nov/In My Arms.mp3", cover: "Nov/covers/inmyarms.jpg" },
+                { month: "November", title: "Late Night", file: "Nov/Late Night.mp3", cover: "Nov/covers/latenight6.jpg" },
+                { month: "November", title: "Long Gone", file: "Nov/Long Gone.mp3", cover: "Nov/covers/longgonept2 2.jpg" },
+                { month: "November", title: "Long Time Coming", file: "Nov/Long Time Coming.mp3", cover: "Nov/covers/longtimecoming.jpg" },
+                { month: "November", title: "No Trespassing", file: "Nov/No Trespassing.mp3", cover: "Nov/covers/notrespassing5.jpeg" },
+                { month: "November", title: "On Your Mind", file: "Nov/On Your Mind.mp3", cover: "Nov/covers/onyourmind3.jpg" },
+                { month: "November", title: "Prime Time", file: "Nov/Prime Time.mp3", cover: "Nov/covers/primetime.png" },
+                { month: "November", title: "Range ft. G Herbo", file: "Nov/Range.mp3", cover: "Nov/covers/range6.png" },
+                { month: "November", title: "Regardless ft. G Herbo", file: "Nov/Regardless.mp3", cover: "Nov/covers/regardless2.png" },
+                { month: "November", title: "Scarface ft. Gunna", file: "Nov/Scarface.mp3", cover: "Nov/covers/scarface12.jpg" },
+                { month: "November", title: "Speed Demon", file: "Nov/Speed Demon.mp3", cover: "Nov/covers/90210 2.png" },
+                { month: "November", title: "Whip", file: "Nov/Whip.mp3", cover: "Nov/covers/alaska.jpg" },
+                { month: "November", title: "Worth It", file: "Nov/Worth It.mp3", cover: "Nov/covers/worthit8.jpg" },
 
-                { month: "December", title: "", file: "Dec/.mp3", cover: "Dec/covers/.jpg" },
-                { month: "December", title: "", file: "Dec/.mp3", cover: "Dec/covers/.jpg" }
+                { month: "December", title: "Dismissed", file: "Dec/Dismissed.mp3", cover: "Dec/covers/dismissed7.jpg" },
+                { month: "December", title: "Dukes (Lost Cause)", file: "Dec/Dukes.mp3", cover: "Dec/covers/lostcause.png" },
+                { month: "December", title: "Hop Out", file: "Dec/Hop Out.mp3", cover: "Dec/covers/hopout5.jpg" },
+                { month: "December", title: "Irony", file: "Dec/Irony.mp3", cover: "Dec/covers/plug5.png" },
+                { month: "December", title: "Right Or Wrong", file: "Dec/Right Or Wrong.mp3", cover: "Dec/covers/rightorwrong2.png" }
             ];
     
             let container = document.getElementById("song-list");
