--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 { month: "August", title: "Out My Body ft. G Herbo", file: "Aug/Out My Body.mp3", cover: "Aug/covers/outmybody.png" },
                 { month: "August", title: "Percs", file: "Aug/Percs.mp3", cover: "Aug/covers/percs5.png" },
                 { month: "August", title: "Racks Out", file: "Aug/Racks Out.mp3", cover: "Aug/covers/racksout4.jpeg" },
-                { month: "August", title: "Ran Off", file: "Aug/Ran Off.mp3", cover: "Aug/covers/ranoff.png" },
+                { month: "August", title: "Ran Off", file: "Aug/Ran Off.mp3", cover: "Aug/covers/ranoff.PNG" },
                 { month: "August", title: "Rikers", file: "Aug/Rikers.mp3", cover: "Aug/covers/rikers7.jpg" },
                 { month: "August", title: "Rockstar In His Prime", file: "Aug/Rockstar In His Prime.mp3", cover: "Aug/covers/rockstarinhisprime8.png" },
-                { month: "August", title: "Rodents", file: "Aug/Rodents.mp3", cover: "Aug/covers/rodents3.jpg" },
+                { month: "August", title: "Rodents", file: "Aug/Rodents.mp3", cover: "Aug/covers/rodents3.JPG" },
                 { month: "August", title: "Sacrifices (Cake)", file: "Aug/Sacrifices.mp3", cover: "Aug/covers/cake.png" },
                 { month: "August", title: "Simp", file: "Aug/Simp.mp3", cover: "Aug/covers/livingatthetop6.png" },
                 { month: "August", title: "Sour", file: "Aug/Sour.mp3", cover: "Aug/covers/sour7.jpg" },
