MORE ICON FIXES

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 { month: "November", title: "Regardless ft. G Herbo", file: "Nov/Regardless.mp3", cover: "Nov/covers/regardless2.png" },
                 { month: "November", title: "Scarface ft. Gunna", file: "Nov/Scarface.mp3", cover: "Nov/covers/scarface12.jpg" },
                 { month: "November", title: "Speed Demon", file: "Nov/Speed Demon.mp3", cover: "Nov/covers/90210 2.png" },
-                { month: "November", title: "Whip", file: "Nov/Whip.mp3", cover: "Nov/covers/alaska.jpg" },
+                { month: "November", title: "Whip", file: "Nov/Whip.mp3", cover: "Nov/covers/alaska.JPG" },
                 { month: "November", title: "Worth It", file: "Nov/Worth It.mp3", cover: "Nov/covers/worthit8.jpg" },
 
                 { month: "December", title: "Dismissed", file: "Dec/Dismissed.mp3", cover: "Dec/covers/dismissed7.jpg" },
